# imgui-sfml-glad-template

./: .gitignore  CMakeLists.txt  README.md
include/: actormgr.h  baseactor.h  circleactor.h  log.h  logcolors.h  maths.h  random.h  rectactor.h
include/actors/: firebar.h
include/imgui-sfml/: imgui-SFML.cpp
include/mimalloc/: mimalloc-new-delete.h  mimalloc-override.lib
include/plog/: Log.h
include/plog/Appenders/: ColorConsoleAppender.h
include/plog/Formatters/: CsvFormatter.h  FuncMessageFormatter.h  TxtFormatter.h
src/: baseactor.cpp  imgui-style.h  main.cpp  new.cpp  staticinit.cpp
